--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/New Project.png" alt="Hydra Logo" width="80" height="80" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/New Project.png" alt="Logo" width="50" height="50" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
